# opentelemetry-lambda-extension

./: Cargo.toml  README.md
src/: error.rs  event_processor.rs  events_extension.rs  http_receiver.rs  lib.rs  main.rs  otel_exporter.rs  pipeline.rs  shutdown_reason.rs  telemetry_api_processor.rs  telemetry_extension.rs
src/controller/: mod.rs
src/events/: application.rs  shutdown.rs
src/exporters/: json.rs  mod.rs
src/messages/: mod.rs  scope_signal.rs
src/pipeline/: builder.rs  mod.rs
src/processors/: mod.rs
src/receivers/: mod.rs
src/receivers/aws_lambda_extension/: event.rs  mod.rs  telemetry_api.rs
