[package]
name = "extension"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.88"
axum = { version = "0.8.4", features = ["macros"] }
lambda-extension = "0.11.0"
mockall = "0.13.1"
opentelemetry = "0.29.1"
opentelemetry-proto = "0.29.0"
serde = "1"
tokio = { version = "1", features = ["macros"] }
tokio-util = "0.7.15"
