[package]
name = "opentelemetry-lambda-extension"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
lambda-extension = "0.11.0"
opentelemetry-proto = "0.30.0"
serde = "1"
thiserror = "2.0.12"
tokio = { version = "1", features = ["macros"] }
tokio-util = "0.7.15"
