[package]
name = "opentelemetry-lambda-extension"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.88"
lambda-extension = "0.11.0"
opentelemetry-proto = "0.30.0"
serde = "1"
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1", features = ["macros"] }
tokio-util = "0.7.15"
